--- a/about_me.css
+++ b/about_me.css
@@ -27,50 +27,28 @@ body {
 
 /* Change color on hover */
 .navbar a:hover {
-  background-color: rgb(147, 241, 229);
+  background-color: rgb(118, 215, 196);
   color: black;
   font-weight: bold;
-}
-p {
-  font-family: verdana;
-  font-size: 20px;
-}
-.loremtext:hover {
-  background-color: rgb(177, 202, 172);
-  color: black;
-  font-weight: bold;
-}
-.loremHead {
-  color: rgb(8, 27, 15);
-  padding: 5px;
-  text-align: center;
-}
-.sep-row {
-  border: 1px solid rgb(155, 4, 185);
-  background-color: rgb(10, 3, 43);
 }
 
-.syntax {
-  text-align: start;
-}
-.listOfTags {
+.main-grid {
+  background-image: url(images/stripe\ .png);
+  position: relative;
+  height: 600px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  width: 100%;
-  height: fit-content;
+  align-items: center;
 }
 .flip-card {
   background-color: rgb(40, 23, 66);
-  width: 300px;
-  height: 320px;
-  margin: 10px;
+  width: 330px;
+  height: 420px;
   padding: 10px;
   border: 1px solid rgb(52, 73, 94);
-  border-radius: 15px;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  position: absolute;
+  top: 15%;
+  left: 35%;
+  border-radius: 20px;
 }
 
 /* This container is needed to position the front and back side */
@@ -87,6 +65,19 @@ p {
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
+flip-card-front h2 {
+  margin-top: 20px;
+  padding-top: 10px;
+}
+flip-card-front h4 {
+  margin-top: 5px;
+  padding-top: 10px;
+}
+
+.flip-card-front p {
+  margin-top: 25px;
+  padding: 15px;
+}
 
 /* Position the front and back side */
 .flip-card-front,
@@ -96,7 +87,6 @@ p {
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
-  border-radius: 10px;
 }
 
 /* Style the front side (fallback if image is missing) */
@@ -108,17 +98,8 @@ p {
 
 /* Style the back side */
 .flip-card-back {
-  background-color: rgb(212, 176, 245);
   color: black;
   transform: rotateY(180deg);
-}
-.contactForm {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 50px;
-  padding: 10px;
 }
 
 /* Footer */
@@ -127,7 +108,6 @@ p {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 50px;
   padding: 20px;
   text-align: center;
   background: rgb(52, 73, 94);
