--- a/pgditju.css
+++ b/pgditju.css
@@ -228,3 +228,105 @@ td {
   color: rgb(194, 247, 235);
   font-weight: bold;
 }
+
+
+/* for smaller Screen (mobile devices)  */
+
+@media (max-width: 600px) {
+
+
+  .main-section {
+    position: relative;
+    background-image: url(images/dawn.jpg);
+    height: 2300px;
+    margin: 0%;
+  }
+  
+  .flip-card {
+    display: flex;
+    background-color: rgb(40, 23, 66);
+  width: 450px;
+  height:fit-content;
+  padding: 5px;
+  border: 1px solid rgb(18, 22, 12);
+  position: relative;
+  margin-top: 30px%;
+  left: .4%;
+  right: .5%;
+  border-radius: 30px;
+    
+  }
+
+  .flip-card-front {
+    background-color: rgb(40, 23, 66);
+    color: aquamarine;
+    padding: 0px;
+    margin: 1px;
+  }
+  .flip-card-back-in {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    border-radius: 10px;
+  }
+  
+  # t1-title {
+
+    margin-top: 50px;
+  }
+  # t2-title {
+
+    margin-top: 50px;
+  }
+  .t-1 {
+    margin-top: 30px;
+    width: 400px;
+    margin-right: 30px;
+    
+    color: aquamarine;
+  }
+  .t-2 {
+    margin-top: 30px;
+    margin-left: 2px;
+    margin-right: 18px;
+    width: 410px;
+    background-color: rgb(40, 23, 66);
+    color: aquamarine;
+  }
+   tr,th,td {
+    border: 3px solid rgb(102, 136, 134);
+    padding: 5px;
+  }
+  th {
+  font-weight: bold;
+  }
+  td {
+    
+  }
+  #degstruc {
+    font-weight: bolder;
+    
+  }
+  .footer{
+  visibility: hidden;
+  }
+  
+}
+
+/* for Medium Screen (Tablet devices)  */
+
+@media (min-width: 600px) {
+  .flip-card {
+    
+  }
+}
+
+/* for Large Screen (Smaller PC devices)  
+
+ Large devices (laptops/desktops, 992px and up) */
+@media (min-width: 992px) {
+  .flip-card {
+      }
+}
